--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,6 +4,7 @@
     height: 100vh;
     background-color: #191d2b;
     position: fixed;
+    border-right: 1px solid #2e344e;
   }
   .main-content {
     width: 84%;
