home page styled and added social links

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,6 @@
-@import "./styles/index.scss";
-@import "./styles/navbar.scss";
+@import "./styles/index";
+@import "./styles/navbar";
+@import "./styles/home";
 * {
   padding: 0;
   margin: 0;
