added skills component and styled

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,9 @@
 @import "./styles/index";
 @import "./styles/navbar";
 @import "./styles/home";
+@import "./styles/about";
+@import "./styles/skill";
+
 * {
   padding: 0;
   margin: 0;
