--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,5 +11,10 @@
     margin-left: 16%;
     background-color: #10121b;
     min-height: 100vh;
+    display: grid;
+    position: relative;
+    .content {
+      margin: 5rem 15rem;
+    }
   }
 }
