--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -96,7 +96,7 @@
     }
   }
   .skillsSection {
-    margin: 4.5rem 0;
+    margin-top: 4rem;
     .skills-container {
       .skill-title {
       }
@@ -126,4 +126,12 @@
       }
     }
   }
+}
+
+.skillsContainer {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  column-gap: 4rem;
+  row-gap: 1rem;
+  margin-top: 3rem;
 }
