--- a/src/styles/skill.scss
+++ b/src/styles/skill.scss
@@ -1,5 +1,4 @@
 .SkillsSection {
-  margin: 4.5rem 0;
 }
 .skills-container {
   .skill-title {
@@ -11,8 +10,9 @@
     .skill-text {
     }
     .skill-progress {
+      width: 100%;
       .progress {
-        width: 20rem;
+        width: 100%;
         height: 0.5rem;
         margin-left: 1rem;
         background-color: #0381ff3f;
