--- a/src/App.scss
+++ b/src/App.scss
@@ -3,15 +3,21 @@
 @import "./styles/home";
 @import "./styles/about";
 @import "./styles/skill";
+@import "./styles/services";
 
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
-
+body::-webkit-scrollbar{
+  display: none;
+}
 body {
   color: #a4acc4;
   font-family: "M PLUS Rounded 1c", sans-serif;
   font-size: 1.2rem;
+}
+span{
+  color:#037FFF
 }
