--- a/src/App.scss
+++ b/src/App.scss
@@ -11,7 +11,14 @@
   box-sizing: border-box;
 }
 body::-webkit-scrollbar{
-  display: none;
+  width: 8px;
+}
+body::-webkit-scrollbar-thumb{
+  background-color: #21609ed5;
+  border-radius: 50px;
+}
+body::-webkit-scrollbar-track{
+  background-color: #a4acc4;
 }
 body {
   color: #a4acc4;
