--- a/src/App.scss
+++ b/src/App.scss
@@ -14,11 +14,11 @@ body::-webkit-scrollbar{
   width: 8px;
 }
 body::-webkit-scrollbar-thumb{
-  background-color: #21609ed5;
+  background-color: #0056d865;
   border-radius: 50px;
 }
 body::-webkit-scrollbar-track{
-  background-color: #a4acc4;
+  background-color: #777;
 }
 body {
   color: #a4acc4;
